--- a/src/layout/preview.html
+++ b/src/layout/preview.html
@@ -4,7 +4,7 @@
     <title>Markdown Preview</title>
 </head>
 <body>
-    <div id="preview-root"></div>
+    <div id="-root"></div>
     <script src="../../dist/previewRenderer.bundle.js"></script>
 </body>
 </html>
